--- a/app/views/static/welcome.html.erb
+++ b/app/views/static/welcome.html.erb
@@ -29,5 +29,6 @@
 </head>
 <body>
 <h1>WELCOME TO : </br> The Gossip Project</h1>
+<h2>Va sur Gossips pour regarder touts les POTINS! </h2>
 </body>
 </html>
