--- a/app/views/dinamic/index.html.erb
+++ b/app/views/dinamic/index.html.erb
@@ -7,7 +7,7 @@
     <title>The Gossip Project</title>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" <%= link_to "The Gossip Project", gossips_path%></a>
+        <a class="navbar-brand" <%= link_to "The Gossip Project", welcome_path%></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,8 +39,8 @@
     <%= gossip.id %>
     <%= gossip.title %> <br/>
 
-    <button type="button" class="btn btn-outline-dark">
-    <a href="/gossip/<%= gossip.id %>">Voir plus<%= gossip.id%></a></button>
+    <button type="button" class="btn btn-light">
+    <a href="/gossip/<%= gossip.id %>" style="text-decoration: none;">Voir plus</a></button>
      <br>
     
     
