--- a/app/views/static/welcome.html.erb
+++ b/app/views/static/welcome.html.erb
@@ -28,7 +28,15 @@
     </nav>
 </head>
 <body>
-<h1>WELCOME TO : </br> The Gossip Project</h1>
-<h2>Va sur Gossips pour regarder touts les POTINS! </h2>
+
+<section class="jumbotron text-center">
+<div class="container">
+  <h1>Glad you are here !</h1>
+  <p class="lead text-muted">You ganna know some new GOSSIPS ? </p>
+  <p>
+    <a class="btn btn-primary my-2" <%= link_to "YES please", gossips_path%></a>
+  </p>
+</div>
+</section>
 </body>
 </html>
