--- a/app/views/dinamic/user.html.erb
+++ b/app/views/dinamic/user.html.erb
@@ -5,35 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User</title>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" <%= link_to "The Gossip Project", welcome_path%></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+            <a class="nav-link" <%= link_to "Gossips", gossips_path%><span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item active">
+            <a class="nav-link" <%= link_to "Team", team_path%><span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" <%= link_to "Contact", contact_path%></a>
+            </li>
+        </ul>
+         </span>
+    </div>
+    </nav>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-<a class="navbar-brand" <%= link_to "The Gossip Project", welcome_path%></a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-        <a class="nav-link" <%= link_to "Gossips", gossips_path%><span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item active">
-        <a class="nav-link" <%= link_to "Team", team_path%><span class="sr-only"></span></a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" <%= link_to "Contact", contact_path%></a>
-        </li>
-    </ul>
-     </span>
+
+<div class="container">
+  <h2 class="text-center mt-5 mb-5">Author :</h2>
+  <div class="row">
+    <div class="col-md-4 offset-md-4">
+      <dl class="dl-horizontal">
+        <dt>First Name:</dt>
+        <dd><%= @user.first_name %></dd>
+        <dt>Last Name:</dt>
+        <dd><%= @user.last_name %></dd>
+        <dt>Description:</dt>
+        <dd><%= @user.description %></dd>
+        <dt>Email:</dt>
+        <dd><%= @user.email %></dd>
+        <dt>Age:</dt>
+        <dd><%= @user.age %></dd>
+        <dt>City:</dt>
+        <dd><%= @user.city.name %></dd>
+        
+      </dl>
+    </div>
+  </div>
 </div>
-</nav>
-<p><%= @user.first_name%>
-<%= @user.last_name%></p>
-<p><%= @user.description%></p>
-<p><%= @user.email%></p>
-<p><%= @user.age%></p>
-<p><%= @user.city.name%></p>
 
 
 </body>
