--- a/app/views/dinamic/welcome.html.erb
+++ b/app/views/dinamic/welcome.html.erb
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome</title>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" <%= link_to "The Gossip Project", welcome_path%></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,9 +26,18 @@
              </span>
         </div>
     </nav>
-   
 </head>
 <body>
-<h1>WELCOME TO : </br> The Gossip Project <%= @name.capitalize %></h1>
+
+<section class="jumbotron text-center">
+<div class="container">
+  <h1>Glad you are here !</h1>
+  <p class="lead text-muted">You ganna know some new GOSSIPS <%= @name.capitalize %> ? </p>
+  <p>
+    <a class="btn btn-primary my-2" <%= link_to "YES please", gossips_path%></a>
+  </p>
+</div>
+</section>
 </body>
 </html>
+
