--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -31,6 +31,22 @@
 <body>
 
 <h1>Contact : </br></h1>
+<form>
+  <div class="form-group col-3">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group col-3">
+    <label for="message">Message</label>
+    <textarea class="form-control" id="message" rows="3"></textarea>
+  </div>
+  <div class="form-group form-check col-3">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">I Agree</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
     
 </body>
 </html>
