--- a/app/views/dinamic/gossip.html.erb
+++ b/app/views/dinamic/gossip.html.erb
@@ -28,12 +28,21 @@
     
 </head>
 <body>
-    <p><%= @gossip.user.first_name%>
-       <%= @gossip.user.last_name%></p>
-    <p><%= @gossip.title%></p>
-    <p><%= @gossip.context%></p>
 
-    <button type="button" class="btn btn-light">
-    <a href="/gossip/user/<%= @gossip.user.id %>" style="text-decoration: none;">Author</a></button>
+<div class="container">
+  <h2 class="text-center mt-5 mb-5">Gossip :</h2>
+  <div class="row">
+    <div class="col-md-4 offset-md-4">
+      <dl class="dl-horizontal">
+        <dt>Title :</dt>
+        <dd><p><%= @gossip.title%></p></dd>
+        <dt>Content:</dt>
+        <dd><p><%= @gossip.context%></p></dd>
+        <button type="button" class="btn btn-light">
+        <a href="/gossip/user/<%= @gossip.user.id %>" style="text-decoration: none;">Author</a></button>
+      </dl>
+    </div>
+  </div>
+</div>  
 </body>
 </html>
