--- a/app/views/dinamic/user.html.erb
+++ b/app/views/dinamic/user.html.erb
@@ -47,6 +47,8 @@
         <dd><%= @user.age %></dd>
         <dt>City:</dt>
         <dd><%= @user.city.name %></dd>
+        <button type="button" class="btn btn-light">
+        <a href="/gossip/<%= @user.id %>" class="btn btn-light">Gossip</a>
         
       </dl>
     </div>
