--- a/app/views/dinamic/welcome.html.erb
+++ b/app/views/dinamic/welcome.html.erb
@@ -5,34 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome</title>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" <%= link_to "The Gossip Project", welcome_path%></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                <a class="nav-link" <%= link_to "Gossips", gossips_path%><span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item active">
-                <a class="nav-link" <%= link_to "Team", team_path%><span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" <%= link_to "Contact", contact_path%></a>
-                </li>
-            </ul>
-             </span>
-        </div>
-    </nav>
 </head>
 <body>
 
 <section class="jumbotron text-center">
 <div class="container">
-  <h1>Glad you are here !</h1>
-  <p class="lead text-muted">You ganna know some new GOSSIPS <%= @name.capitalize %> ? </p>
+  <h1>Glad you are here <%= @name.capitalize %>!</h1>
+  <p class="lead text-muted">You ganna know some new GOSSIPS  ? </p>
   <p>
     <a class="btn btn-primary my-2" <%= link_to "YES please", gossips_path%></a>
   </p>
