total comments of a gossip

--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -30,6 +30,7 @@
     BYE Gossip
   <% end %>
   </p>
+  <p>Total comments : <%= @gossip.comments.length%></p></dd<p>
 </div>
 </section>
 <div class="col-md-8 mx-auto">
