--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -15,6 +15,7 @@
   </p>
   <p>
   <a class="btn btn-primary my-2" <%= link_to "Add a Gossip", new_gossip_path%></a>
+  <a class="btn btn-primary my-2" <%= link_to "Sign in", new_session_path%></a>
   <a class="btn btn-primary my-2" <%= link_to "I'm not a member...yet", new_user_path%></a>
   </p>
 </div>
