--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,19 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<style>
-  .center {
-    display: flex;
-    justify-content: center;
-   <!--  align-items: center; -->
-    height: 100vh;
-  }
-  form {
-    width: 400px;
-  }
-</style>
-
-<%= form_for(User.new) do |form| %>
+<%= form_with(model: @user, local: true) do |form| %>
   <div class="form-group">
     <%= form.label :first_name %>
     <%= form.text_field :first_name, class: "form-control" %>
@@ -41,22 +29,21 @@
     <%= form.number_field :age, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= form.label :city %>
+    <%= form.label :city_id %>
     <%= form.collection_select(:city_id, City.all, :id, :name, { prompt: true }, class: "form-control") %>
-    <%= form.label :new_city_name %>
-    <%= form.text_field :new_city_name, class: "form-control" %>
   </div>
-  <div class="form-group form-check">
-    <%= form.check_box :terms_and_conditions, class: "form-check-input", id: "exampleCheck1" %>
-    <%= form.label :terms_and_conditions, class: "form-check-label", for: "exampleCheck1" do %>
-      OK, let's do this!
-    <% end %>
+  <div class="form-group">
+    <%= form.label :password %>
+    <%= form.password_field :password, class: "form-control" %>
   </div>
-  <%= form.submit "Create User", class: "btn btn-primary" %>
+  <div class="form-group">
+    <%= form.label :password_confirmation %>
+    <%= form.password_field :password_confirmation, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= form.submit "Create", class: "btn btn-primary" %>
+  </div>
 <% end %>
-
-
-
 
 </body>
 </html>
