log out session

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -20,6 +20,7 @@
   <p>Total comments : </p></dd<p>
   </div>
   </section>
+  <%= link_to "Log out", logout_path, method: :delete, data: { confirm: "Are you sure you want to log out?" }, class: "btn btn-primary my-2" %>
 
 
 </body>
